api & web - add availability route
