# apps/api/generated-api-swagger-definition.yaml
@@ -248,14 +248,182 @@ paths:
                     status: error
                     error:
                       message: Sample error message
-  /v1/offices/{id}:
+  /v1/offices/{office_id}/days/{date}/availability:
     get:
-      operationId: GetV1OfficesId
+      operationId: GetV1OfficesOfficeIdDaysDateAvailability
       parameters:
-        - name: id
+        - name: office_id
           in: path
           required: true
-          description: GET /v1/offices/:id Parameter
+          description: GET /v1/offices/:office_id/days/:date/availability Parameter
+          schema:
+            type: number
+            format: double
+            exclusiveMinimum: 0
+            maximum: 1.7976931348623157e+308
+        - name: date
+          in: path
+          required: true
+          description: GET /v1/offices/:office_id/days/:date/availability Parameter
+          schema:
+            type: string
+            minLength: 10
+            maxLength: 10
+      security:
+        - HTTP_1: []
+      responses:
+        "200":
+          description: GET /v1/offices/:office_id/days/:date/availability Positive response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    const: success
+                  data:
+                    type: object
+                    properties:
+                      office:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                            format: int64
+                            minimum: -9007199254740991
+                            maximum: 9007199254740991
+                          city:
+                            type: string
+                          capacity:
+                            type: integer
+                            format: int64
+                            minimum: -9007199254740991
+                            maximum: 9007199254740991
+                          is_peak_limited:
+                            type: boolean
+                        required:
+                          - id
+                          - city
+                          - capacity
+                          - is_peak_limited
+                      capacity:
+                        type: object
+                        properties:
+                          office_id:
+                            type: number
+                            format: double
+                            exclusiveMinimum: 0
+                            maximum: 1.7976931348623157e+308
+                          total_capacity_hours:
+                            type: integer
+                            format: int64
+                            exclusiveMinimum: 0
+                            maximum: 9007199254740991
+                          high_demand:
+                            type: boolean
+                          booked_hours:
+                            type: integer
+                            format: int64
+                            minimum: 0
+                            maximum: 9007199254740991
+                          filled_ratio:
+                            type: number
+                            format: double
+                            minimum: 0
+                            maximum: 1
+                          filled_percentage:
+                            type: string
+                        required:
+                          - office_id
+                          - total_capacity_hours
+                          - high_demand
+                          - booked_hours
+                          - filled_ratio
+                          - filled_percentage
+                      reservations:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            id:
+                              type: integer
+                              format: int64
+                              minimum: -9007199254740991
+                              maximum: 9007199254740991
+                            user_id:
+                              type: integer
+                              format: int64
+                              minimum: -9007199254740991
+                              maximum: 9007199254740991
+                            office_id:
+                              type: integer
+                              format: int64
+                              minimum: -9007199254740991
+                              maximum: 9007199254740991
+                            seat_number:
+                              type: integer
+                              format: int64
+                              minimum: -9007199254740991
+                              maximum: 9007199254740991
+                            date:
+                              type: string
+                            start_time:
+                              type: string
+                            end_time:
+                              type: string
+                            status:
+                              type: string
+                          required:
+                            - id
+                            - user_id
+                            - office_id
+                            - seat_number
+                            - date
+                            - start_time
+                            - end_time
+                            - status
+                    required:
+                      - office
+                      - capacity
+                      - reservations
+                required:
+                  - status
+                  - data
+        "400":
+          description: GET /v1/offices/:office_id/days/:date/availability Negative response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    const: error
+                  error:
+                    type: object
+                    properties:
+                      message:
+                        type: string
+                    required:
+                      - message
+                required:
+                  - status
+                  - error
+              examples:
+                example1:
+                  value:
+                    status: error
+                    error:
+                      message: Sample error message
+  /v1/offices/{office_id}:
+    get:
+      operationId: GetV1OfficesOfficeId
+      parameters:
+        - name: id
+          in: query
+          required: true
+          description: GET /v1/offices/:office_id Parameter
           schema:
             type: number
             format: double
@@ -263,7 +431,7 @@ paths:
             maximum: 1.7976931348623157e+308
       responses:
         "200":
-          description: GET /v1/offices/:id Positive response
+          description: GET /v1/offices/:office_id Positive response
           content:
             application/json:
               schema:
@@ -303,7 +471,7 @@ paths:
                   - status
                   - data
         "400":
-          description: GET /v1/offices/:id Negative response
+          description: GET /v1/offices/:office_id Negative response
           content:
             application/json:
               schema:
